sandbox_fixtures/pls_benchmark_v1/force-app/main/default/objects/PLS_BM_Deal__c/PLS_BM_Deal__c.object-meta.xml
<CustomObject>
    <label>Plimsol Benchmark Deal</label>
    <nameField>
        <displayFormat>DEAL-{00000}</displayFormat>
        <label>Deal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plimsol Benchmark Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>