sandbox_fixtures/pls_benchmark_v1/force-app/main/default/objects/PLS_BM_Deal__c/fields/PLS_BM_Approval_Reason__c.field-meta.xml
<CustomField>
    <fullName>PLS_BM_Approval_Reason__c</fullName>
    <label>Approval Reason</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>