sandbox_fixtures/pls_benchmark_v1/force-app/main/default/objects/PLS_BM_Deal__c/fields/PLS_BM_Compliance_Approved__c.field-meta.xml
<CustomField>
    <fullName>PLS_BM_Compliance_Approved__c</fullName>
    <label>Compliance Approved</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>