sandbox_fixtures/pls_benchmark_v1/force-app/main/default/objects/PLS_BM_Deal__c/fields/PLS_BM_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>PLS_BM_Contract_Number__c</fullName>
    <label>Contract Number</label>
    <type>Text</type>
    <length>50</length>
</CustomField>