sandbox_fixtures/pls_benchmark_v1/force-app/main/default/objects/PLS_BM_Deal__c/fields/PLS_BM_Deal_Value__c.field-meta.xml
<CustomField>
    <fullName>PLS_BM_Deal_Value__c</fullName>
    <label>Deal Value</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>