sandbox_fixtures/pls_benchmark_v1/force-app/main/default/objects/PLS_BM_Deal__c/fields/PLS_BM_Discount__c.field-meta.xml
<CustomField>
    <fullName>PLS_BM_Discount__c</fullName>
    <label>Discount</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>