sandbox_fixtures/pls_benchmark_v1/force-app/main/default/objects/PLS_BM_Deal__c/fields/PLS_BM_Expected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>PLS_BM_Expected_Close_Date__c</fullName>
    <label>Expected Close Date</label>
    <type>Date</type>
</CustomField>