sandbox_fixtures/pls_benchmark_v1/force-app/main/default/objects/PLS_BM_Deal__c/fields/PLS_BM_External_Reference__c.field-meta.xml
<CustomField>
    <fullName>PLS_BM_External_Reference__c</fullName>
    <label>External Reference</label>
    <type>Text</type>
    <length>30</length>
</CustomField>