sandbox_fixtures/pls_benchmark_v1/force-app/main/default/objects/PLS_BM_Deal__c/fields/PLS_BM_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>PLS_BM_Override_Reason__c</fullName>
    <label>Override Reason</label>
    <type>TextArea</type>
</CustomField>