sandbox_fixtures/pls_benchmark_v1/force-app/main/default/objects/PLS_BM_Deal__c/recordTypes/PLS_BM_Enterprise.recordType-meta.xml
<RecordType>
    <fullName>PLS_BM_Enterprise</fullName>
    <active>true</active>
    <label>Enterprise Benchmark Deal</label>
</RecordType>