sandbox_fixtures/pls_benchmark_v1/force-app/main/default/objects/PLS_BM_Deal__c/recordTypes/PLS_BM_Standard.recordType-meta.xml
<RecordType>
    <fullName>PLS_BM_Standard</fullName>
    <active>true</active>
    <label>Standard Benchmark Deal</label>
</RecordType>