sandbox_fixtures/pls_benchmark_v1/force-app/main/default/objects/PLS_BM_Deal__c/validationRules/PLS_BM_VR01_Positive_Deal_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>PLS_BM_VR01_Positive_Deal_Value</fullName>
    <active>true</active>
    <description>Deal Value must be greater than zero. Blank values are allowed.</description>
    <errorConditionFormula>NOT(ISBLANK(PLS_BM_Deal_Value__c)) &amp;&amp; PLS_BM_Deal_Value__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>PLS_BM_Deal_Value__c</errorDisplayField>
    <errorMessage>Deal Value must be greater than zero.</errorMessage>
</ValidationRule>