sandbox_fixtures/pls_benchmark_v1/force-app/main/default/objects/PLS_BM_Deal__c/validationRules/PLS_BM_VR02_Approval_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>PLS_BM_VR02_Approval_Reason</fullName>
    <active>true</active>
    <description>Approval Reason is mandatory when Discount exceeds 20%. Exactly 20% is allowed without a reason.</description>
    <errorConditionFormula>PLS_BM_Discount__c &gt; 0.20 &amp;&amp; ISBLANK(PLS_BM_Approval_Reason__c)</errorConditionFormula>
    <errorDisplayField>PLS_BM_Approval_Reason__c</errorDisplayField>
    <errorMessage>Approval Reason is required when Discount exceeds 20%.</errorMessage>
</ValidationRule>