sandbox_fixtures/pls_benchmark_v1/force-app/main/default/objects/PLS_BM_Deal__c/validationRules/PLS_BM_VR05_Approved_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>PLS_BM_VR05_Approved_Lock</fullName>
    <active>true</active>
    <description>Once a deal is Approved, Deal Value cannot be changed. Allows creation and unrelated field edits.</description>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(PLS_BM_Stage__c), "Approved") &amp;&amp;
ISCHANGED(PLS_BM_Deal_Value__c)</errorConditionFormula>
    <errorDisplayField>PLS_BM_Deal_Value__c</errorDisplayField>
    <errorMessage>Deal Value cannot be changed after the deal has been approved.</errorMessage>
</ValidationRule>