sandbox_fixtures/pls_benchmark_v1/force-app/main/default/objects/PLS_BM_Deal__c/validationRules/PLS_BM_VR07_Critical_Risk.validationRule-meta.xml
<ValidationRule>
    <fullName>PLS_BM_VR07_Critical_Risk</fullName>
    <active>true</active>
    <description>Critical Risk deals require both Compliance Approval and an Override Reason.</description>
    <errorConditionFormula>ISPICKVAL(PLS_BM_Risk_Level__c, "Critical") &amp;&amp;
(NOT(PLS_BM_Compliance_Approved__c) || ISBLANK(PLS_BM_Override_Reason__c))</errorConditionFormula>
    <errorDisplayField>PLS_BM_Risk_Level__c</errorDisplayField>
    <errorMessage>Critical Risk deals require Compliance Approval and an Override Reason.</errorMessage>
</ValidationRule>